<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="preferences_screen">
    <!--
    <EditTextPreference
        android:title="Your Name"
        android:key="username"
        android:summary="Please provide your username"/>
    <ListPreference
        android:title="Download Details"
        android:summary="Select the kind of data that you would like to download"
        android:key="downloadType"
        android:defaultValue="1"/>
        -->
    <com.aarkir.tiles.SeekBarPreference
        android:defaultValue="5"
        android:dialogMessage="@string/columns_message"
        android:key="columns"
        android:max="10"
        android:summary="@string/columns_summary"
        android:text="@string/columns_units"
        android:title="@string/columns_title" />
    <com.aarkir.tiles.SeekBarPreference
        android:defaultValue="2"
        android:dialogMessage="@string/columnDivisions_message"
        android:key="columnDivisions"
        android:max="100"
        android:summary="@string/columnDivisions_summary"
        android:text="@string/columnDivisions_units"
        android:title="@string/columnDivisions_title" />
    <CheckBoxPreference
        android:title="Icon Backgrounds"
        android:defaultValue="true"
        android:summary="If selected app icons will have a background with their primary vibrant color."
        android:key="backgrounds" />
    <CheckBoxPreference
        android:title="Sort Apps by Size"
        android:defaultValue="false"
        android:summary="If selected apps will be sorted by their size, then alphabetically."
        android:key="sizeSort" />
</PreferenceScreen>